include/parser/parser.output
Terminals which are not used

   TOKEN_IDENTIFIER


State 2 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: configuracion secuencia_notas

    2 configuracion: /* empty */
    3              | configuracion config_item

    4 config_item: config_tempo
    5            | config_compas
    6            | config_tonalidad
    7            | TOKEN_COMENTARIO

    8 config_tempo: TOKEN_TEMPO TOKEN_NUMERO

    9 @1: /* empty */

   10 config_compas: TOKEN_COMPAS TOKEN_NUMERO @1 TOKEN_BARRA TOKEN_NUMERO

   11 config_tonalidad: TOKEN_TONALIDAD nota_tonalidad modo

   12 nota_tonalidad: TOKEN_NOTA_DO
   13               | TOKEN_NOTA_RE
   14               | TOKEN_NOTA_MI
   15               | TOKEN_NOTA_FA
   16               | TOKEN_NOTA_SOL
   17               | TOKEN_NOTA_LA
   18               | TOKEN_NOTA_SI

   19 modo: TOKEN_MAYOR
   20     | TOKEN_MENOR

   21 secuencia_notas: /* empty */
   22                | secuencia_notas nota_item

   23 nota_item: nota
   24          | TOKEN_COMENTARIO

   25 nota: TOKEN_NOTA_COMPLETA duracion
   26     | nota_individual duracion

   27 nota_individual: nota_basica octava
   28                | nota_basica alteracion octava

   29 nota_basica: TOKEN_NOTA_DO
   30            | TOKEN_NOTA_RE
   31            | TOKEN_NOTA_MI
   32            | TOKEN_NOTA_FA
   33            | TOKEN_NOTA_SOL
   34            | TOKEN_NOTA_LA
   35            | TOKEN_NOTA_SI

   36 alteracion: TOKEN_SOSTENIDO
   37           | TOKEN_BEMOL

   38 octava: TOKEN_NUMERO

   39 duracion: TOKEN_BLANCA
   40         | TOKEN_NEGRA
   41         | TOKEN_CORCHEA
   42         | TOKEN_SEMICORCHEA


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_TONALIDAD (258) 11
TOKEN_TEMPO (259) 8
TOKEN_COMPAS (260) 10
TOKEN_BLANCA (261) 39
TOKEN_NEGRA (262) 40
TOKEN_CORCHEA (263) 41
TOKEN_SEMICORCHEA (264) 42
TOKEN_NOTA_DO (265) 12 29
TOKEN_NOTA_RE (266) 13 30
TOKEN_NOTA_MI (267) 14 31
TOKEN_NOTA_FA (268) 15 32
TOKEN_NOTA_SOL (269) 16 33
TOKEN_NOTA_LA (270) 17 34
TOKEN_NOTA_SI (271) 18 35
TOKEN_SOSTENIDO (272) 36
TOKEN_BEMOL (273) 37
TOKEN_MAYOR (274) 19
TOKEN_MENOR (275) 20
TOKEN_NUMERO (276) 8 10 38
TOKEN_BARRA (277) 10
TOKEN_NOTA_COMPLETA (278) 25
TOKEN_IDENTIFIER (279)
TOKEN_COMENTARIO (280) 7 24


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
programa (27)
    on left: 1, on right: 0
configuracion (28)
    on left: 2 3, on right: 1 3
config_item (29)
    on left: 4 5 6 7, on right: 3
config_tempo (30)
    on left: 8, on right: 4
config_compas (31)
    on left: 10, on right: 5
@1 (32)
    on left: 9, on right: 10
config_tonalidad (33)
    on left: 11, on right: 6
nota_tonalidad (34)
    on left: 12 13 14 15 16 17 18, on right: 11
modo (35)
    on left: 19 20, on right: 11
secuencia_notas (36)
    on left: 21 22, on right: 1 22
nota_item (37)
    on left: 23 24, on right: 22
nota (38)
    on left: 25 26, on right: 23
nota_individual (39)
    on left: 27 28, on right: 26
nota_basica (40)
    on left: 29 30 31 32 33 34 35, on right: 27 28
alteracion (41)
    on left: 36 37, on right: 28
octava (42)
    on left: 38, on right: 27 28
duracion (43)
    on left: 39 40 41 42, on right: 25 26


state 0

    0 $accept: . programa $end

    $default  reduce using rule 2 (configuracion)

    programa       go to state 1
    configuracion  go to state 2


state 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


state 2

    1 programa: configuracion . secuencia_notas
    3 configuracion: configuracion . config_item

    TOKEN_TONALIDAD   shift, and go to state 4
    TOKEN_TEMPO       shift, and go to state 5
    TOKEN_COMPAS      shift, and go to state 6
    TOKEN_COMENTARIO  shift, and go to state 7

    TOKEN_COMENTARIO  [reduce using rule 21 (secuencia_notas)]
    $default          reduce using rule 21 (secuencia_notas)

    config_item       go to state 8
    config_tempo      go to state 9
    config_compas     go to state 10
    config_tonalidad  go to state 11
    secuencia_notas   go to state 12


state 3

    0 $accept: programa $end .

    $default  accept


state 4

   11 config_tonalidad: TOKEN_TONALIDAD . nota_tonalidad modo

    TOKEN_NOTA_DO   shift, and go to state 13
    TOKEN_NOTA_RE   shift, and go to state 14
    TOKEN_NOTA_MI   shift, and go to state 15
    TOKEN_NOTA_FA   shift, and go to state 16
    TOKEN_NOTA_SOL  shift, and go to state 17
    TOKEN_NOTA_LA   shift, and go to state 18
    TOKEN_NOTA_SI   shift, and go to state 19

    nota_tonalidad  go to state 20


state 5

    8 config_tempo: TOKEN_TEMPO . TOKEN_NUMERO

    TOKEN_NUMERO  shift, and go to state 21


state 6

   10 config_compas: TOKEN_COMPAS . TOKEN_NUMERO @1 TOKEN_BARRA TOKEN_NUMERO

    TOKEN_NUMERO  shift, and go to state 22


state 7

    7 config_item: TOKEN_COMENTARIO .

    $default  reduce using rule 7 (config_item)


state 8

    3 configuracion: configuracion config_item .

    $default  reduce using rule 3 (configuracion)


state 9

    4 config_item: config_tempo .

    $default  reduce using rule 4 (config_item)


state 10

    5 config_item: config_compas .

    $default  reduce using rule 5 (config_item)


state 11

    6 config_item: config_tonalidad .

    $default  reduce using rule 6 (config_item)


state 12

    1 programa: configuracion secuencia_notas .
   22 secuencia_notas: secuencia_notas . nota_item

    TOKEN_NOTA_DO        shift, and go to state 23
    TOKEN_NOTA_RE        shift, and go to state 24
    TOKEN_NOTA_MI        shift, and go to state 25
    TOKEN_NOTA_FA        shift, and go to state 26
    TOKEN_NOTA_SOL       shift, and go to state 27
    TOKEN_NOTA_LA        shift, and go to state 28
    TOKEN_NOTA_SI        shift, and go to state 29
    TOKEN_NOTA_COMPLETA  shift, and go to state 30
    TOKEN_COMENTARIO     shift, and go to state 31

    $default  reduce using rule 1 (programa)

    nota_item        go to state 32
    nota             go to state 33
    nota_individual  go to state 34
    nota_basica      go to state 35


state 13

   12 nota_tonalidad: TOKEN_NOTA_DO .

    $default  reduce using rule 12 (nota_tonalidad)


state 14

   13 nota_tonalidad: TOKEN_NOTA_RE .

    $default  reduce using rule 13 (nota_tonalidad)


state 15

   14 nota_tonalidad: TOKEN_NOTA_MI .

    $default  reduce using rule 14 (nota_tonalidad)


state 16

   15 nota_tonalidad: TOKEN_NOTA_FA .

    $default  reduce using rule 15 (nota_tonalidad)


state 17

   16 nota_tonalidad: TOKEN_NOTA_SOL .

    $default  reduce using rule 16 (nota_tonalidad)


state 18

   17 nota_tonalidad: TOKEN_NOTA_LA .

    $default  reduce using rule 17 (nota_tonalidad)


state 19

   18 nota_tonalidad: TOKEN_NOTA_SI .

    $default  reduce using rule 18 (nota_tonalidad)


state 20

   11 config_tonalidad: TOKEN_TONALIDAD nota_tonalidad . modo

    TOKEN_MAYOR  shift, and go to state 36
    TOKEN_MENOR  shift, and go to state 37

    modo  go to state 38


state 21

    8 config_tempo: TOKEN_TEMPO TOKEN_NUMERO .

    $default  reduce using rule 8 (config_tempo)


state 22

   10 config_compas: TOKEN_COMPAS TOKEN_NUMERO . @1 TOKEN_BARRA TOKEN_NUMERO

    $default  reduce using rule 9 (@1)

    @1  go to state 39


state 23

   29 nota_basica: TOKEN_NOTA_DO .

    $default  reduce using rule 29 (nota_basica)


state 24

   30 nota_basica: TOKEN_NOTA_RE .

    $default  reduce using rule 30 (nota_basica)


state 25

   31 nota_basica: TOKEN_NOTA_MI .

    $default  reduce using rule 31 (nota_basica)


state 26

   32 nota_basica: TOKEN_NOTA_FA .

    $default  reduce using rule 32 (nota_basica)


state 27

   33 nota_basica: TOKEN_NOTA_SOL .

    $default  reduce using rule 33 (nota_basica)


state 28

   34 nota_basica: TOKEN_NOTA_LA .

    $default  reduce using rule 34 (nota_basica)


state 29

   35 nota_basica: TOKEN_NOTA_SI .

    $default  reduce using rule 35 (nota_basica)


state 30

   25 nota: TOKEN_NOTA_COMPLETA . duracion

    TOKEN_BLANCA       shift, and go to state 40
    TOKEN_NEGRA        shift, and go to state 41
    TOKEN_CORCHEA      shift, and go to state 42
    TOKEN_SEMICORCHEA  shift, and go to state 43

    duracion  go to state 44


state 31

   24 nota_item: TOKEN_COMENTARIO .

    $default  reduce using rule 24 (nota_item)


state 32

   22 secuencia_notas: secuencia_notas nota_item .

    $default  reduce using rule 22 (secuencia_notas)


state 33

   23 nota_item: nota .

    $default  reduce using rule 23 (nota_item)


state 34

   26 nota: nota_individual . duracion

    TOKEN_BLANCA       shift, and go to state 40
    TOKEN_NEGRA        shift, and go to state 41
    TOKEN_CORCHEA      shift, and go to state 42
    TOKEN_SEMICORCHEA  shift, and go to state 43

    duracion  go to state 45


state 35

   27 nota_individual: nota_basica . octava
   28                | nota_basica . alteracion octava

    TOKEN_SOSTENIDO  shift, and go to state 46
    TOKEN_BEMOL      shift, and go to state 47
    TOKEN_NUMERO     shift, and go to state 48

    alteracion  go to state 49
    octava      go to state 50


state 36

   19 modo: TOKEN_MAYOR .

    $default  reduce using rule 19 (modo)


state 37

   20 modo: TOKEN_MENOR .

    $default  reduce using rule 20 (modo)


state 38

   11 config_tonalidad: TOKEN_TONALIDAD nota_tonalidad modo .

    $default  reduce using rule 11 (config_tonalidad)


state 39

   10 config_compas: TOKEN_COMPAS TOKEN_NUMERO @1 . TOKEN_BARRA TOKEN_NUMERO

    TOKEN_BARRA  shift, and go to state 51


state 40

   39 duracion: TOKEN_BLANCA .

    $default  reduce using rule 39 (duracion)


state 41

   40 duracion: TOKEN_NEGRA .

    $default  reduce using rule 40 (duracion)


state 42

   41 duracion: TOKEN_CORCHEA .

    $default  reduce using rule 41 (duracion)


state 43

   42 duracion: TOKEN_SEMICORCHEA .

    $default  reduce using rule 42 (duracion)


state 44

   25 nota: TOKEN_NOTA_COMPLETA duracion .

    $default  reduce using rule 25 (nota)


state 45

   26 nota: nota_individual duracion .

    $default  reduce using rule 26 (nota)


state 46

   36 alteracion: TOKEN_SOSTENIDO .

    $default  reduce using rule 36 (alteracion)


state 47

   37 alteracion: TOKEN_BEMOL .

    $default  reduce using rule 37 (alteracion)


state 48

   38 octava: TOKEN_NUMERO .

    $default  reduce using rule 38 (octava)


state 49

   28 nota_individual: nota_basica alteracion . octava

    TOKEN_NUMERO  shift, and go to state 48

    octava  go to state 52


state 50

   27 nota_individual: nota_basica octava .

    $default  reduce using rule 27 (nota_individual)


state 51

   10 config_compas: TOKEN_COMPAS TOKEN_NUMERO @1 TOKEN_BARRA . TOKEN_NUMERO

    TOKEN_NUMERO  shift, and go to state 53


state 52

   28 nota_individual: nota_basica alteracion octava .

    $default  reduce using rule 28 (nota_individual)


state 53

   10 config_compas: TOKEN_COMPAS TOKEN_NUMERO @1 TOKEN_BARRA TOKEN_NUMERO .

    $default  reduce using rule 10 (config_compas)
